[🚀 사이클2 - 미션 (기물 확장 + DB 적용)] 티온 미션 제출합니다. (#280)
* docs: README.md 작성

* docs: README.md 수정

* docs: README.md 클래스다이어그램 추가

* docs: README.md 기물 명칭 추가

* feat: 기본 장기판 설정 (기물차림 제외)

* feat: 장기판 기물차림 생성

* refactor: Piece의 name Type PieceName 으로 변경.

장점: 객체로 만듦으로써 Scope 확인 가능.
또한 객체끼리 소통할 떄 사용 가능

String 쓸때 장점:
Piece가 한의 이름도 갖고 초의 이름도 갖고있는데 하나로 바꿀 수 있다.

* chore(pakage): janggi 최상위 패키지 생성

* feat: Player 생성

PlayerSetUp: 도메인끼리 결합도 낮추기 위해서.
각 게임별로 Side가 달라지기 때문에 라이프 사이클을 맞추기 위해 분리

* test: Board 기물차림 테스트 추가.

* feat: Empty 객체 생성

* chore[package]: 좌표계 패키지 생성

* feat: PathStrategy 생성

FixedPathStrategy : 고정된 경로(Cannon, Chariot 제외)

LinearPathStrategy: 해당되는 방향의 모든 경로 생성(Cannon, Chariot)

* chore[package]: rename coordinate

* refactor: Point에서 Board 사용하지 않도록 리팩토링

* chore[package]: 패키지 정리

* refactor: Piece -> Board (Point 책임 분리)

* refactor: Directions (directions -> pattern) rename

* refactor: Directions -> Pattern 이름변경

* refactor: Directions -> Pattern 이름 변경

* refactor: Pattern (Strategy제거)

* feat: 좌표 경계 범위 변경

* feat: Path 유틸리티 메서드 추가

* fix: x,y 좌표 휴먼에러 수정

* fix: Side 예외처리 수정

* feat: Piece 구현체

* fix: PathStrategy 구현체 테스트 추가 및 수정

* test: Path 테스트 추가

* refactor: Board paths 이름 변경

* refactor: Player 삭제

미션 본연의 목적에 집중하기 위해,
게임에는 필요하지만 연관관계가 있는 Player 삭제

* refactor: 공통 기물 생성 Board-> BoardSetUp

* refactor: Empty 인스턴스 활용

* chore: getName메서드 생성

* feat: Game 기능 추가

* feat: View, Controller 생성

* fix: 갈 수 없는 경로 생성 오류 수정

* refactor: Point 인스턴스 생성 재사용

* refactor: 게임 종료 판단 Controller -> Game

* docs: README.md 업데이트

* refactor: path 패키지 변경 + 네이밍 리뷰 반영

* chore[package]: path 패키지 Board로 다시 이동

* refactor: Piece 공통메서드 분리

* refactor: 분기 판단 로직 변경(Exception 삭제)

* refactor: Null Object(Empty) 삭제

* refcator: CandidatePath 생성 책임 Board -> Piece

* refactor: Pattern -> Movement 네이밍 변경

* refactor: PieceName 메서드 단순화

* refactor: pattern -> movement 네이밍 변경

* refactor: path -> candidatePath 이름 변경

* chore[package]: CandidatePathTest 변경 반영

* fix: 잘못된 Point 입력 시 종료 안되도록 수